--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -1,5 +1,9 @@
+{% load static %}
 <html>
-    <head>Django blog</head>
+    <head>
+        <title>Django blog</title>
+        <link href="{% static 'css/base.css' %}" rel="stylesheet">
+    </head>
     <body>
         <header>
             <h1><a href="{% url 'home'%}">Django blog</a></h1>
